--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,68 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
+# azure-pipelines.yml
 trigger:
-- main
+- master  # 监听 main 分支的代码提交
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'windows-latest'  # 使用微软托管代理
+
+variables:
+  MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
 
 steps:
-- task: Maven@3
+- task: Cache@2  # Maven 依赖缓存加速
+  inputs:
+    key: 'maven | "$(Agent.OS)" | pom.xml'
+    restoreKeys: |
+      maven | "$(Agent.OS)"
+    path: $(MAVEN_CACHE_FOLDER)
+
+- task: Maven@3  # Maven 构建
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
+    goals: 'clean install'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+
+- task: CopyFiles@2  # 打包产物归档
+  inputs:
+    SourceFolder: 'target'
+    Contents: '*.jar'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- script: |
+    echo "验证 Edge 浏览器版本"
+    reg query "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\EdgeUpdate\Clients\{56EB18F8-B008-4CBD-B6D2-8C97FE7E9062}" /v pv
+  displayName: '检查 Edge 版本'
+
+- script: |
+    echo "运行 UI 测试"
+    mvn test -Dtest=SearchTest
+  displayName: '执行 UI 测试'
+  env:
+    EDGE_WEBDRIVER_PATH: $(System.DefaultWorkingDirectory)/drivers
+
+- script: |
+    mvn allure:report
+  displayName: '生成 Allure 报告'
+
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'Allure'
+    testResultsFiles: 'allure-results/*.xml'
+- task: PublishBuildArtifacts@1  # 发布构建产物
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      echo "##vso[task.complete result=Succeeded;]DONE"
+  displayName: '发送通知'
+  condition: always()
+  env:
+    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+
