--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,17 @@
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
+            <!-- Allure 报告插件 -->
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.12.0</version>
+                <configuration>
+                    <reportVersion>2.24.0</reportVersion>
+                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
+                    <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
