--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,7 +1,7 @@
 trigger:
 - master
 
-pool: 770812942.JoyceP53  # slef-hosted agent pool
+pool: JoyceP53  # slef-hosted agent pool
 
 variables:
   JAVA_HOME: C:\Program Files\Java\jdk-17  # Self-hosted agent already installed JDK 17
