--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,17 +4,25 @@ trigger:
 pool: JoyceP53  # slef-hosted agent pool
 
 variables:
-  JAVA_HOME: C:\Program Files\Java\jdk-17  # Self-hosted agent already installed JDK 17
+  JAVA_HOME: C:\Program Files\Java\jdk-17  
   MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
   MAVEN_OPTS: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
   EDGE_WEBDRIVER_PATH: C:\drivers
-  MAVEN_HOME: C:\Users\Joyce\Install\maven\apache-maven-3.9.9  # Self-hosted agent already installed Maven 3.9.6
+  MAVEN_HOME: C:\Users\Joyce\Install\maven\apache-maven-3.9.9 
   PATH: $(PATH);$(JAVA_HOME)\bin;$(MAVEN_HOME)\bin
 
 steps:
 # ----------------------
-# Stage 0: Maven 环境验证
+# Stage 0: 环境验证
 # ----------------------
+- task: CmdLine@2
+  inputs:
+    script: |
+      set PATH=$(MAVEN_HOME)\bin;%PATH%
+      mvn clean install
+  displayName: '安装 Maven'
+  condition: succeededOrFailed()
+  
 - script: |
     echo "Java 版本:"
     java -version
