--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,10 +11,18 @@ variables:
   MAVEN_HOME: 'C:\Users\Joyce\Install\maven\apache-maven-3.9.9' 
   PATH: $(PATH);'$(JAVA_HOME)\bin';'$(MAVEN_HOME)\bin'  # 路径用单引号包裹
 
+
 steps:
 # ----------------------
 # Stage 0: 环境验证
 # ----------------------
+- script: |
+    where java
+    where mvn
+    java -version
+    mvn -version
+  displayName: '验证命令路径'
+
 - script: |
     echo "Java 版本:"
     java -version
