--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,7 +7,7 @@ variables:
   JAVA_HOME: "C:\\Program Files\\Java\\jdk-17"
   MAVEN_HOME: "C:\\Users\\Joyce\\Install\\maven\\apache-maven-3.9.9"
   MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
-  EDGE_WEBDRIVER_PATH: C:\drivers
+  EDGE_WEBDRIVER_PATH: "C:\\drivers"
   PATH: 'C:\Windows\System32;$env:PATH;"$(JAVA_HOME)\bin";"$(MAVEN_HOME)\bin"'
 
 steps:
