Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,7 +8,9 @@ variables:
   MAVEN_HOME: "C:\\Users\\Joyce\\Install\\maven\\apache-maven-3.9.9"
   MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
   EDGE_WEBDRIVER_PATH: "C:\\drivers"
-  PATH: 'C:\Windows\System32;$env:PATH;"$(JAVA_HOME)\bin";"$(MAVEN_HOME)\bin"'
+  EDGE_BINARY_PATH: "C:\\Program Files (x86)\\Microsoft\\Edge\\Application"
+  EDGE_DRIVER_LOGFILE: $(Agent.WorkFolder)\\logs\\edgedriver.log
+  PATH: 'C:\\Windows\\System32;$(PATH);"$(JAVA_HOME)\\bin";"$(MAVEN_HOME)\\bin"'
 
 steps:
 - script: |
@@ -36,8 +38,8 @@ steps:
   displayName: 'Cache Maven dependencies'
 
 - script: |
-    dir "%EDGE_WEBDRIVER_PATH%\msedgedriver.exe"
-  displayName: 'Check whether the existing of edge driver'
+    dir "$(EDGE_WEBDRIVER_PATH)\\msedgedriver.exe"
+  displayName: 'Check Edge Driver Existence'
 
 # ----------------------
 # Stage 2: Maven Build (with cache)
@@ -52,15 +54,16 @@ steps:
 # ----------------------
 - script: |
     mvn test -Dtest=SearchTest ^
-      -Dwebdriver.edge.driver="C:\drivers\msedgedriver.exe" ^
-      -Dedge.binary.path="C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe" ^
-      -Dwebdriver.edge.logfile="C:\agent\_work\logs\edgedriver.log" ^
+      -Dwebdriver.edge.driver="$(EDGE_WEBDRIVER_PATH)\\msedgedriver.exe" ^
+      -Dedge.binary.path="$(EDGE_BINARY_PATH)\\msedge.exe" ^
+      -Dwebdriver.edge.logfile="$(EDGE_DRIVER_LOGFILE)" ^
       -Dwebdriver.edge.verboseLogging=true ^
       -Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)
   displayName: 'Execute UI tests with Full Logging'
   env:
     EDGE_WEBDRIVER_PATH: $(EDGE_WEBDRIVER_PATH)
   condition: succeededOrFailed()
+
 # ----------------------
 # Stage 4: Test Results Publishing
 # ----------------------
@@ -69,7 +72,7 @@ steps:
     testResultsFormat: 'JUnit'
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     mergeTestResults: true
-  displayName: 'Test Results Publishing'
+  displayName: 'Publish Test Results'
   condition: succeededOrFailed()
 
 # ----------------------
@@ -80,10 +83,10 @@ steps:
     SourceFolder: 'target'
     Contents: '*.jar'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
-  displayName: 'Collect JAR artifacts'
+  displayName: 'Collect JAR Artifacts'
 
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'JarFiles'
-  displayName: 'Publish JAR artifacts'
+  displayName: 'Publish JAR Artifacts'
