--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,23 +4,26 @@ trigger:
 pool: JoyceP53  # slef-hosted agent pool
 
 variables:
-  JAVA_HOME: C:\Program Files\Java\jdk-17  # Self-hosted agent already installed JDK 17
+  JAVA_HOME: "C:\\Program Files\\Java\\jdk-17"
+  MAVEN_HOME: "C:\\Users\\Joyce\\Install\\maven\\apache-maven-3.9.9"
   MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
-  MAVEN_OPTS: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
-  EDGE_WEBDRIVER_PATH: C:\drivers
-  MAVEN_HOME: C:\Users\Joyce\Install\maven\apache-maven-3.9.9  # Self-hosted agent already installed Maven 3.9.6
-  PATH: $(PATH);$(JAVA_HOME)\bin;$(MAVEN_HOME)\bin
+  EDGE_WEBDRIVER_PATH: "C:\\drivers"
+  EDGE_BINARY_PATH: "C:\\Program Files (x86)\\Microsoft\\Edge\\Application"
+  EDGE_DRIVER_LOGFILE: $(Agent.WorkFolder)\\logs\\edgedriver.log
 
 steps:
-# ----------------------
-# Stage 0: Maven 环境验证
-# ----------------------
 - script: |
-    echo "Java 版本:"
+    echo "##vso[task.prependpath]C:\\Windows\\System32"
+    echo "##vso[task.prependpath]$(JAVA_HOME)\\bin"
+    echo "##vso[task.prependpath]$(MAVEN_HOME)\\bin"
+    echo "##vso[task.prependpath]$(EDGE_WEBDRIVER_PATH)"
+  displayName: 'Set Dynamic PATH'
+
+- script: |
     java -version
-    echo "Maven 版本:"
     mvn -version
-  displayName: '环境检查'
+    msedgedriver --version
+  displayName: 'Verify Commands'
 
 # ----------------------
 # Stage 0: Cache Maven Dependencies
