--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,26 +4,44 @@ trigger:
 pool: JoyceP53
 
 variables:
-  JAVA_HOME: "C:\\Program Files\\Java\\jdk-17"
-  MAVEN_HOME: "C:\\Users\\Joyce\\Install\\maven\\apache-maven-3.9.9"
+  # 删除所有硬编码路径定义，直接使用系统环境变量
   MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
-  EDGE_WEBDRIVER_PATH: "C:\\drivers"
-  EDGE_BINARY_PATH: "C:\\Program Files (x86)\\Microsoft\\Edge\\Application"
-  EDGE_DRIVER_LOGFILE: $(Agent.WorkFolder)\\logs\\edgedriver.log
+  EDGE_DRIVER_LOGFILE: $(Agent.WorkFolder)/logs/edgedriver.log
 
 steps:
+# ----------------------
+# 环境验证阶段
+# ----------------------
 - script: |
-    echo "##vso[task.prependpath]C:\\Windows\\System32"
-    echo "##vso[task.prependpath]$(JAVA_HOME)\\bin"
-    echo "##vso[task.prependpath]$(MAVEN_HOME)\\bin"
-    echo "##vso[task.prependpath]$(EDGE_WEBDRIVER_PATH)"
-  displayName: 'Set Dynamic PATH'
+    @echo 验证系统环境变量...
+    where java   || echo "##vso[task.logissue type=error]JAVA_HOME 未配置"
+    where mvn    || echo "##vso[task.logissue type=error]MAVEN_HOME 未配置"
+    where msedgedriver || echo "##vso[task.logissue type=error]EDGE_WEBDRIVER_PATH 未配置"
+    
+    @echo 关键环境变量值：
+    echo JAVA_HOME=%JAVA_HOME%
+    echo MAVEN_HOME=%MAVEN_HOME%
+    echo EDGE_WEBDRIVER_PATH=%EDGE_WEBDRIVER_PATH%
+  displayName: 'Validate System Environment'
+  failOnStderr: true
 
+# ----------------------
+# 动态路径配置阶段
+# ----------------------
+- script: |
+    echo ##vso[task.prependpath]%JAVA_HOME%/bin
+    echo ##vso[task.prependpath]%MAVEN_HOME%/bin
+    echo ##vso[task.prependpath]%EDGE_WEBDRIVER_PATH%
+  displayName: 'Configure Dynamic PATH'
+
+# ----------------------
+# 环境检查阶段
+# ----------------------
 - script: |
     java -version
     mvn -version
     msedgedriver --version
-  displayName: 'Verify Commands'
+  displayName: 'Check Environment'
 
 # ----------------------
 # Stage 1: Cache Maven Dependencies
